# TEC_MLOps_Mod2

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_list.py  todos.py
src/: main.ipynb
src/todos/: list_methods.py
tec_mlops_mod2/: __main__.py  main.py
tec_mlops_mod2/todos/: list_methods.py  typer_app.py
tests/integration/: test_integration.py
tests/unit/: test_list_methods.py
